--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,12 +20,12 @@
  */
 
 apply plugin: 'com.android.application'
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.0"
 
     defaultConfig {
         applicationId "org.tigase.messenger.phone.pro"
@@ -33,6 +33,9 @@ android {
         targetSdkVersion 23
         versionCode 30
         versionName "3.0.0-beta-1"
+        jackOptions {
+            enabled true
+        }
     }
     signingConfigs {
         release {
@@ -51,8 +54,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
