--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,8 +56,9 @@
                 android:value="org.tigase.messenger.phone.pro.MainActivity" />
         </activity>
         <activity
-            android:name=".account.LoginActivity"
-            android:label="@string/title_activity_login">
+                android:screenOrientation="locked"
+                android:name=".account.LoginActivity"
+                android:label="@string/title_activity_login">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
