--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,9 @@
  */
 
 apply plugin: 'com.android.application'
-
-
+//apply plugin: 'com.neenbedankt.android-apt'
+//Java8使用
+//apply plugin: 'me.tatarka.retrolambda'
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
@@ -33,8 +34,8 @@ android {
         versionCode 30
         versionName "3.0.0-beta-1"
         jackOptions {
-            enabled true
-        }
+          enabled true
+       }
     }
     signingConfigs {
         release {
@@ -58,6 +59,7 @@ android {
     }
 
 }
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -80,5 +82,6 @@ dependencies {
     compile 'com.android.support:design:24.0.0'
     compile 'com.android.support:support-v4:24.0.0'
     compile 'com.android.support:recyclerview-v7:24.0.0'
-    compile 'com.jakewharton:butterknife:7.0.1'
+   //compile 'com.jakewharton:butterknife:8.2.0'
+   //apt 'com.jakewharton:butterknife-compiler:8.2.0'
 }
