--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="sensorPortrait"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -50,14 +51,16 @@
         <activity
             android:name=".settings.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="sensorPortrait"
+            >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.tigase.messenger.phone.pro.MainActivity" />
         </activity>
         <activity
-                android:screenOrientation="locked"
                 android:name=".account.LoginActivity"
+                android:screenOrientation="sensorPortrait"
                 android:label="@string/title_activity_login">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
